# hunter

./: .travis.yml  test.sh
cmake/configs/: default.cmake
cmake/projects/hunter_box_1/: hunter.cmake
cmake/projects/nng/: hunter.cmake
cmake/projects/zstd/: hunter.cmake
cmake/schemes/: url_sha1_cmake.cmake.in
examples/hunter_box_1/: CMakeLists.txt  boo.cpp
